
    - the following translations were added:

      Indonesian

    - the following translations were updated:

      Spanish(ES), Czech, Belarusian, Ukrainian

    - Developers: winx_strdup, winx_vsprintf, winx_sprintf, winx_enable_dbg_log,
      winx_disable_dbg_log, winx_get_module_filename, winx_path_remove_filename,
      winx_path_remove_extension, winx_path_extract_filename
      functions added to zenwinx library

    beta1:
    - defragmentation algorithm reimplemented; partial defragmentation improved
    - ability to defragment MFT as well as other internal NTFS files
      on Windows XP and Windows Server 2003 was added
    - ability to defragment internal NTFS files on Windows 2000 was added
    - one huge bug was fixed in the boot time defragmenter, udefrag.dll and
      zenwinx.dll libraries - they all have had improper definition of the
      IO_STATUS_BLOCK structure used by many undocumented Windows API functions
    - a problem was fixed, where the abort flag was not cleared, when entering
      the interactive mode at boot time
    - actions to take after processing is done implemented as separate menu
    - file status was added to reports
    - current time was added to reports
    - ability to specify not only drive letters but also paths of files
      and folders added to the command line and the boot time interfaces
    - Explorer context menu handler reimplemented to be more reliable
      (batch script used before caused sometimes an environment 
      desynchronization due to the start of udefrag command with elevated
      privileges on Vista and Windows 7)
    - added icon to Explorer context menu handler in Windows 7 and later
    - the following translations were added:

      Galician, Tamil

    - the following translations were updated:

      Italian, Norwegian, Portuguese, Spanish(ES), French(FR), Dutch, Czech,
      Vietnamese(VI), Spanish(AR)

    - dry_run parameter added to GUI options as well as UD_DRY_RUN environment